<resources>
    <string name="app_name" translatable="false">NMedia2</string>
    <string name="nmedia2">Hello NMedia2!</string>
    <string name="description_post_author_avatar">avatar author</string>
    <string name="description_menu_button">menu button</string>
    <string name="likes_amount" translatable="false">555</string>
    <string name="description_like_button">like button</string>
    <string name="description_views">icon_count_views</string>
    <string name="views_amount" translatable="false">333</string>
    <string name="description_share_button">share button</string>
    <string name="share_amount" translatable="false">777</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">post text</string>
    <string name="error_empty_content">Сontent cannot be empty</string>
    <string name="description_button_save_post">button save Post</string>
    <string name="description_button_new_post">button create new Post</string>
    <string name="description_link_video">link to video</string>
    <string name="description_button_link_video">button link to video</string>
    <string name="menu_edit">Edit</string>
    <string name="edit_message">Edit message</string>
    <string name="description_cancel_edit_button">cancel edit button</string>
    <string name="description_edit_mode_icon">edit mode icon</string>
    <string name="chooser_share_post">share</string>
</resources>